update the logo (small image) update the FractionPlotL update info text update search layout ( “Validated Proteins Results Only” check box  to “Validated Proteins Only”) update export file names